# FastAPI-Template

./: cookiecutter.json
hooks/: pre_prompt.py
{{cookiecutter.project_slug}}/: Dockerfile  Makefile  README.md  config.mk  constanst.mk  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: main.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/database/: connection.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/routers/: tests.py
